# Nonefinity_Task

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  health.py
src/ai/: __init__.py
src/ai/common/: __init__.py  text_processor.py
src/ai/embeddings/: __init__.py  embedder_registry.py  embedding.py
src/ai/workflows/: __init__.py
src/config/: __init__.py  config.py
src/infrastructure/: __init__.py
src/infrastructure/celery/: __init__.py  app.py  routing.py
src/infrastructure/database/: __init__.py  constants.py  mongodb.py  qdrant.py
src/infrastructure/storage/: __init__.py  minio.py
src/tasks/ai/: embedding.py
src/utils/: logger.py
